kubernetes/workshop-monitoring-service/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-monitoring-service
  labels:
    app: workshop-monitoring-service
    component: monitoring
    part-of: workshop-template-system
spec:
  to:
    kind: Service
    name: workshop-monitoring-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
